@@ -29,7 +29,7 @@ public final class StringResourceLoader {
                     Resource::getFilename,
                     StringResourceLoader::loadResourceToString,
                     (u, v) -> {
-                        throw new IllegalStateException(String.format("Duplicate key %s", u));
+                        throw new IllegalStateException("Duplicate key %s".formatted(u));
                     },
                     TreeMap::new
                 ));
